[tool.poetry]
name = "bots"
version = "0.1.0"
description = ""
authors = ["bright_moon_bot <bright_moon_bot@g2beta.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
